# aelyris

./: .env.example  .gitignore  AGENTS.md  AI_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DECISION_FRAMEWORK.md  DELEGATION_FRAMEWORK.md  GOAL.md  LICENSE  PLAN.md  README.ja.md  README.md  REFACTOR_RESULT.md  SECURITY.md  STYLE.md  audit-remediation-instructions.md  biome.json  fleet-api-instructions.md  hardening-instructions.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  refactor-instructions.md  renderer-instructions.md  test-smoke.mjs  tsconfig.json  ui-density-instructions.md  ui-quality-instructions.md  vite.config.ts  vitest.config.ts
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.dist.conf.json
src-tauri/benches/: term_engine.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: plan_demo.rs  replan_demo.rs  review_demo.rs
src-tauri/icons/: icon.icns
src-tauri/pty-server/: Cargo.toml  app.manifest  build.rs
src-tauri/pty-server/src/: main.rs
src-tauri/src/: audit.rs  durable_file.rs  lib.rs  main.rs  process.rs  pty_sidecar.rs  shared_brain.rs  startup_reconciliation.rs  watcher.rs
src-tauri/src/agent/: claude.rs  context_lifecycle.rs  interactive.rs  mod.rs  oneshot.rs  output_monitor.rs  parser.rs  router.rs  session.rs  session_lifecycle.rs  status.rs  watchdog.rs
src-tauri/src/agent/__fixtures__/: rt1a0-provider-matrix.json
src-tauri/src/api/: mcp.rs  mod.rs  mux.rs  session_common.rs
src-tauri/src/command_risk/: approval.rs  authority.rs  corpus.json  gate.rs  mod.rs  tests.rs
src-tauri/src/config/: keybindings.rs  mod.rs  settings.rs
src-tauri/src/context_store/: manager.rs  mod.rs
src-tauri/src/control/: agent.rs  approval.rs  diff.rs  gate_runner.rs  loop_ports.rs  merge.rs  mod.rs  pane.rs  pane_fleet.rs  worktree.rs
src-tauri/src/cost/: manager.rs  mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs
src-tauri/src/event_bus/: manager.rs  mod.rs
src-tauri/src/failure_policy/: mod.rs
src-tauri/src/file_ownership/: mod.rs
src-tauri/src/ghostdiff/: apply.rs  diff_engine.rs  layer.rs  mod.rs  registry.rs  watcher.rs
src-tauri/src/git/: discovery.rs  filelist.rs  filetree.rs  merge.rs  mod.rs  status.rs  worktree.rs
src-tauri/src/governance/: mod.rs  tests.rs
src-tauri/src/gpu/: atlas.rs  blur.rs  commands.rs  cursor.rs  font.rs  ghost.rs  grid.rs  ime.rs  input.rs  link.rs  mod.rs  renderer.rs  search.rs  selection.rs  surface.rs
src-tauri/src/gpu/shaders/: blur.wgsl  glyph.wgsl  gradient_rect.wgsl  rect.wgsl
src-tauri/src/history/: embedding.rs  mod.rs  store.rs  types.rs
src-tauri/src/intent/: manager.rs  mod.rs
src-tauri/src/ipc/: commands.rs  config_commands.rs  context_commands.rs  cost_commands.rs  db_session_commands.rs  event_commands.rs  failure_commands.rs  fs_commands.rs  fs_watcher_commands.rs  ghostdiff_commands.rs  git_commands.rs  history_commands.rs  ime_commands.rs  interactive_commands.rs  knowledge_commands.rs  logs_commands.rs  lsp_commands.rs  merge_commands.rs  mod.rs  mux_commands.rs  orchestrator_commands.rs  ownership_commands.rs  persistence_commands.rs  proofbook_commands.rs  repair_commands.rs  review_commands.rs  search_commands.rs  send_keys_commands.rs  session_lifecycle_commands.rs  shared_brain_commands.rs  shell_integration_commands.rs  snapshot_commands.rs  suggest_commands.rs  symbol_ownership_commands.rs  task_commands.rs  workflow_commands.rs
src-tauri/src/knowledge_graph/: index.rs  manager.rs  mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/lsp/: manager.rs  mod.rs  types.rs
src-tauri/src/merge_intent/: mod.rs  store.rs
src-tauri/src/mux/: graph.rs  keymap.rs  layout.rs  manager.rs  mod.rs  store.rs
src-tauri/src/native/: actions.rs  app_handler.rs  helpers.rs  input.rs  mica.rs  mod.rs  panes.rs  render.rs  types.rs  watcher.rs
src-tauri/src/orchestrator/: autonomy.rs  exam.rs  mod.rs
src-tauri/src/persistence/: decision_repo.rs  event_repo.rs  intent_repo.rs  merge_repo.rs  mod.rs  ownership_repo.rs  session_checkpoint_repo.rs  task_repo.rs
src-tauri/src/proofbook/: agent_step.rs  errors.rs  ledger.rs  mod.rs  parser.rs  runner.rs  step_manual_gate.rs  step_shell.rs  step_wait.rs  types.rs  validator.rs
src-tauri/src/pty/: buffer.rs  error.rs  manager.rs  mod.rs  registry.rs  scrollback.rs  shell.rs
src-tauri/src/review/: branch.rs  gates.rs  judge.rs  mod.rs
src-tauri/src/session/: manager.rs  mod.rs
src-tauri/src/shell_integration/: mod.rs
src-tauri/src/snapshot/: mod.rs  store.rs  types.rs
src-tauri/src/suggest/: mod.rs
src-tauri/src/supervisor/: escalation_sink.rs  mod.rs
src-tauri/src/symbol_ownership/: agent_context.rs  extract.rs  mod.rs
src-tauri/src/task/: decompose.rs  graph.rs  manager.rs  mod.rs  planner.rs  replan.rs  status.rs  symbol_enrich.rs
src-tauri/src/term/: command_blocks.rs  diff.rs  engine.rs  mod.rs  native.rs  native_input.rs  prompt_marks.rs  render_frame.rs  render_pipeline.rs  snapshot.rs  text_shaping.rs
src-tauri/src/term/images/: chunked_osc.rs  decoded.rs  kitty.rs  mod.rs  sequences.rs  sixel.rs  store.rs
src-tauri/src/ui/: activity.rs  analytics.rs  animation.rs  block.rs  dialog.rs  diff.rs  editor.rs  helm.rs  icons.rs  kanban.rs  mod.rs  palette.rs  scm.rs  search.rs  shadow.rs  sidebar.rs  syntax.rs  theme.rs  toast.rs  tokens.rs  toolkit.rs  welcome.rs
src-tauri/src/ui/widgets/: mod.rs  (+3 more)
src-tauri/src/watchdog/: auto_repair.rs  engine.rs  mod.rs  monitor.rs  pane_watcher.rs  rules.rs
src-tauri/src/workflow/: executor.rs  mod.rs  parser.rs  types.rs
src-tauri/tests/: pty_harness.rs  test_agent.rs  test_api_3d1.rs  test_api_3d1_v2a.rs  test_api_3d1_v2b.rs  test_audit_event_bus_snapshot.rs  test_chunked_osc_emitter.rs  test_concurrent_durability.rs  test_process_spawn_hygiene.rs  test_pty_advanced.rs  test_pty_basic.rs  test_pty_broadcast.rs  test_pty_lifecycle.rs  test_pty_respawn.rs  test_runtime_persistence.rs  test_session.rs
src-tauri/tests/fixtures/: mock_agent.ps1
(+1055 files in other folders)
