[package]
name = "aether-terminal"
version = "0.1.0"
description = "Windows-native AI workspace terminal"
authors = ["vellyalis"]
edition = "2021"

[lib]
name = "aether_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "native-terminal"
path = "src/bin/native_terminal.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# PTY (terminal backend)
portable-pty = "0.8"

# Git operations
git2 = "0.19"

# Config
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# UUID for terminal instance IDs
uuid = { version = "1", features = ["v4"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.7.0"

# Error handling
thiserror = "2"

# Regex for output parsing
regex = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# YAML workflow definitions
serde_yaml = "0.9"

# File system watching
notify = { version = "7", features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"

# Window effects: Mica/Acrylic via tauri.conf.json windowEffects (no external crate needed)

# --- Editor ---
ropey = "1"
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"

# --- GPU terminal renderer (wgpu) ---
wgpu = "25"
vte = "0.13"
fontdue = "0.9"
unicode-width = "0.2"
bytemuck = { version = "1", features = ["derive"] }
raw-window-handle = "0.6"
winit = "0.30"
pollster = "0.4"
arboard = "3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Ime",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
]

[dev-dependencies]
tempfile = "3"
