[package]
name = "aether-terminal"
version = "0.2.2"
description = "Windows-native AI workspace terminal"
authors = ["vellyalis"]
edition = "2021"

[lib]
name = "aether_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# PTY (terminal backend)
portable-pty = "0.8"

# Terminal state engine (Phase 2 — replaces xterm.js parsing/grid)
alacritty_terminal = "0.26"

# Git operations
git2 = "0.19"

# Config
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# UUID for terminal instance IDs
uuid = { version = "1", features = ["v4"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.7.0"

# Error handling
thiserror = "2"

# Regex for output parsing
regex = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# YAML workflow definitions
serde_yaml = "0.9"

# File system watching
notify = { version = "7", features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"

# Phase 3D-1 spike: HTTP/WebSocket external PTY API
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
# Phase 3D-1 v2a: CORS middleware
tower-http = { version = "0.5", features = ["cors"] }
# Phase 3D-1 v2b: audited constant-time byte equality for token / ticket
# comparisons. Replaces the hand-rolled implementation in api/mod.rs.
subtle = "2"

# Window effects: Mica/Acrylic via tauri.conf.json windowEffects (no external crate needed)

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Ime",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
]

[dev-dependencies]
tempfile = "3"
# Phase 3D-1: integration tests for external PTY API. `default-features =
# false` drops TLS on purpose — tests only hit `http://127.0.0.1:*`. If a
# future test needs HTTPS (say a redirect chain), add `rustls-tls` to this
# feature list explicitly.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio-tungstenite = "0.24"
# Criterion for terminal-engine microbenchmarks. `html_reports` is a
# default feature that pulls in a lot of transitive graph-drawing deps we
# do not need on CI; turning default features off keeps the dev build
# fast and limits cargo audit surface.
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "term_engine"
harness = false
