[package]
name = "aelyris"
version = "0.2.3"
description = "Windows-first AI development workspace"
authors = ["vellyalis"]
edition = "2021"
default-run = "Aelyris"
autobins = false

[[bin]]
name = "Aelyris"
path = "src/main.rs"

[[bin]]
name = "aelys"
path = "src/bin/aelys.rs"

[[bin]]
name = "aelyris-native"
path = "src/bin/aelyris_native.rs"

[lib]
name = "aelyris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Note: an explicit `tauri-winres` build-dependency was tried in 2026-05-03
# round 3 to embed FileVersionInfo into the dev .exe. Codex review caught
# that `tauri_build::build()` already invokes `tauri-winres` internally
# on Windows and writes the same `OUT_DIR/resource.lib`, so the explicit
# call collided with Tauri's path. Removed — metadata now flows from
# `tauri.conf.json bundle` (productName / publisher / copyright / etc.)
# which Tauri's built-in resource step already reads.

[dependencies]
# Tauri core
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }

# PTY (terminal backend)
portable-pty = "0.8"

# Terminal state engine (Phase 2 native parsing/grid)
alacritty_terminal = "0.26"
# Full-native renderer proof path. Keep the first proof headless/offscreen and
# Windows-focused; the later operator-primary shell will add a visible winit surface.
wgpu = { version = "28.0.0", default-features = false, features = ["std", "dx12", "wgsl"] }
pollster = "0.4"
winit = { version = "0.30.13", default-features = false, features = ["rwh_06"] }
swash = "0.2.9"
png = "0.17"

# Git operations
git2 = "0.21"

# Config
toml = "0.8"

# Logging
# `log` is kept for the 75 existing `log::*` call sites; the
# `tracing-log` adapter (registered in `logging::init`) routes them
# through the tracing pipeline so they end up in the JSON stderr
# stream and the in-memory ring buffer alongside native `tracing`
# events. env_logger was dropped in Tier 🟡 #7.
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-log = "0.2"

# UUID for terminal instance IDs
uuid = { version = "1", features = ["v4"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.7.0"
# Auto-updater (post-0.2.2 Tier 🔴 #3). Endpoint + pubkey live in
# tauri.conf.json; key management is documented in
# docs/auto_updater_setup.md and bootstrapped via scripts/setup-updater-keys.
tauri-plugin-updater = "2"

# Error handling
thiserror = "2"

# Regex for output parsing
regex = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# YAML workflow definitions. Keep the Rust import name stable while using the
# maintained fork so workflow parsing call sites stay untouched.
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }

# File system watching
notify = { version = "8.2.0", features = ["macos_kqueue"] }
notify-debouncer-mini = "0.7.0"

# Phase 3D-1 spike: HTTP/WebSocket external PTY API
# Keep Axum aligned with the current tokio-tungstenite/tungstenite stack so
# Windows runtime dependency audits do not retain stale WebSocket advisories.
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio-tungstenite = "0.29"
# Phase 3D-1 v2a: CORS middleware
tower-http = { version = "0.6.8", features = ["cors"] }
# Phase 3D-1 v2b: audited constant-time byte equality for token / ticket
# comparisons. Replaces the hand-rolled implementation in api/mod.rs.
subtle = "2"

# Tier 🟡 #5 Sprint 2: Kitty graphics protocol payloads ship as
# base64-encoded bytes (`t=d`). Already in the dependency tree
# transitively via tauri/notify; pinning explicitly so the decode path
# is auditable on its own.
base64 = "0.22"
bytemuck = { version = "1", features = ["derive"] }
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"

# Window effects: Mica/Acrylic via tauri.conf.json windowEffects (no external crate needed)

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_UI_Controls",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_EventLog",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Power",
    "Win32_System_Variant",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
]

[target.'cfg(windows)'.dependencies.windows-core]
version = "0.62"

# WebView2 COM bindings — used to assert the controller's transparent
# DefaultBackgroundColor directly (Tauri/wry's forwarding is a no-op for an
# already-created controller on Win11 WebView2 149.x+). Pinned to the same
# version Tauri 2.11 resolves so `PlatformWebview::controller()` returns a
# matching `ICoreWebView2Controller`.
[target.'cfg(windows)'.dependencies.webview2-com]
version = "0.38"

# webview2-com's interfaces implement windows-core 0.61's `Interface` trait, so
# the `.cast()` to ICoreWebView2Controller2 needs that exact version in scope
# (the app otherwise uses windows-core 0.62). Aliased to avoid a name clash.
[target.'cfg(windows)'.dependencies.windows-core-061]
package = "windows-core"
version = "0.61"

[dev-dependencies]
tempfile = "3"
# Criterion for terminal-engine microbenchmarks. `html_reports` is a
# default feature that pulls in a lot of transitive graph-drawing deps we
# do not need on CI; turning default features off keeps the dev build
# fast and limits cargo audit surface.
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "term_engine"
harness = false

[patch.crates-io]
portable-pty = { path = "vendor/portable-pty-0.8.1" }
